# obamify-light

./: Cargo.toml  README.md  flake.nix  index.html  worker.js
.github/workflows/: cf_pages.yml  release.yaml
assets/: manifest.json  sw.js
presets/5aa07122296293d574c1ee4e8e1ab584/: assignments.json
presets/apple128/: assignments.json
presets/apple128_1/: assignments.json
presets/apple128_2/: assignments.json
presets/blackhole128/: assignments.json
presets/obama_rot128/: assignments.json
presets/release notes/: assignments.json
presets/trump2_128/: assignments.json
presets/wisetree128/: assignments.json
presets/wisetree128_1/: assignments.json
src/: app.rs  gui.rs  main.rs  morph_sim.rs
src/app/: gif_recorder.rs  gui.rs  morph_sim.rs
src/app/calculate/: drawing_process.rs  mod.rs  util.rs
src/app/calculate/worker/: mod.rs
src/calculate/: drawing_process.rs  mod.rs  util.rs
src/shaders/: clear.wgsl  jfa.wgsl  seed.wgsl  shade.wgsl
